v2.1.2 checkin    * Fixed linter warnings/errors    * Added 'back' navigation to dual-pane list view when in landscape mode    * Fixed a couple backwards-compatibility issues    * Fixed profile import (now the car names are actually imported!)    * Fixed force-close when user selects 'modify car name' when no list item is selected    * Updated achartengine code
git-svn-id: https://mileagetracker-ts.googlecode.com/svn/trunk@51 3ee66ade-36c5-3220-4c94-a9de85c8904b